--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,10 @@
     }
 
     .button-submit {
-        @apply font-quicksand font-bold bg-blue-500 text-white active:bg-blue-600 text-sm w-full py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mb-1 ease-linear transition-all duration-150
+        @apply bg-blue-500 text-white active:bg-blue-600 w-full rounded shadow hover:shadow-lg outline-none focus:outline-none ease-linear transition-all duration-150
+    }
+
+    .base_btn {
+        @apply text-sm font-quicksand font-bold py-2.5 px-5
     }
 }
