Replaced the modal with material ui modal,changed in input in comment section

--- a/src/index.css
+++ b/src/index.css
@@ -140,3 +140,12 @@
         right: -10px;
     }
 }
+/* YourDatePicker.css */
+.custom-date-picker .MuiSvgIcon-root:focus,
+.custom-date-picker .MuiSvgIcon-root:active {
+    border: none !important;
+    /* Remove the border when the calendar icon is focused or active */
+}
+.MuiButtonBase-root {
+    border: none !important;
+}
