--- a/src/index.css
+++ b/src/index.css
@@ -149,3 +149,31 @@
 .MuiButtonBase-root {
     border: none !important;
 }
+
+/* CSS for comments section edit functionality */
+
+/* CSS for the dropdown icon */
+.options-dropdown {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+/* CSS for the dropdown list item */
+.options-dropdown ul {
+    list-style: none;
+    padding: 0;
+}
+
+.options-dropdown ul li {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.options-dropdown ul li:hover {
+    background-color: #f0f0f0;
+}
