--- a/src/index.css
+++ b/src/index.css
@@ -176,7 +176,7 @@
 
 .fixTableHead {
     overflow-y: auto;
-    height: 550pt;
+    height: 530pt;
 }
 
 .fixTableHead thead th {
@@ -197,4 +197,27 @@ td {
 
 th {
     background: #d6d8d6;
+}
+.options-dropdown {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.options-dropdown ul {
+    list-style: none;
+    padding: 0;
+}
+
+.options-dropdown ul li {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.options-dropdown ul li:hover {
+    background-color: #F0F0F0;
 }
