made changes inside the edit and delete modal and CSS from index.css file to make the modals appear in the center of the comments section

--- a/src/index.css
+++ b/src/index.css
@@ -200,3 +200,13 @@
 .options-dropdown ul li:hover {
     background-color: #f0f0f0;
 }
+
+/* CSS for centering edit and delete Modal */
+.center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 100%;
+  }
