--- a/src/index.css
+++ b/src/index.css
@@ -206,7 +206,7 @@ th {
     background-color: #fff;
     border: 1px solid #ccc;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-
+    z-index: 1;
 }
 
 .options-dropdown ul {
