--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,6 @@
         -moz-transition: opacity 0.3s linear, right 0.3s ease-out;
         -o-transition: opacity 0.3s linear, right 0.3s ease-out;
         transition: opacity 0.3s linear, right 0.3s ease-out;
-
     }
 
     .custom-modal-dialog::-webkit-scrollbar {
@@ -94,8 +93,8 @@
         position: relative;
         background: white;
         height: auto;
-        /* width: auto; */
-        max-width: 370px;
+        width: auto;
+        /* max-width: 370px; */
         margin-left: 6px;
         border-radius: 2px;
         border-radius: 5px;
@@ -118,8 +117,8 @@
         position: relative;
         background: rgb(220, 238, 241);
         height: auto;
-        /* width:auto; */
-        max-width: 390px;
+        width:auto;
+        /* max-width: 390px; */
         margin-left: 6px;
         border-radius: 2px;
         border-radius: 5px;
@@ -206,7 +205,7 @@ th {
     background-color: #fff;
     border: 1px solid #ccc;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-
+    z-index: 1;
 }
 
 .options-dropdown ul {
@@ -248,3 +247,39 @@ th {
   transform: translateY(-50%);
   width: 100%;
 }
+
+/* CSS for Resizable div */
+
+/* .container {
+    border-radius: 5px;
+    width: 100vw;
+    height: 100vh;
+    background: #FFBC97;
+    position: relative;
+  } */
+  
+  .resizeable {
+    /* position: absolute; */
+    /* border: 1px solid #533535; */
+    /* width: 100px; */
+    /* height: 100px; */
+    /* border-radius: 3px; */
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    min-width: 250px;
+    /* min-height: 50px; */
+  }
+  
+  /* .resizer {
+    position: absolute;
+    background: black;
+  } */
+  
+  /* .resizer-l {
+    cursor: col-resize;
+    height: 100%;
+    left: 0;
+    top: 0;
+    width: 5px;
+  } */
