--- a/src/index.css
+++ b/src/index.css
@@ -299,3 +299,38 @@ th {
     top: 0;
     width: 25px;
 }
+
+/*  */
+
+.container {
+    position: relative;
+
+  }
+  
+  .image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 4%;
+    right: 2%;
+  
+  }
+  
+  .container:hover .image {
+    opacity: 0.8;
+  }
+  
+  .container:hover .middle {
+    opacity: 1;
+  }
+  
